--- a/templates/loginpasswd.html
+++ b/templates/loginpasswd.html
@@ -4,8 +4,8 @@
 
 {% block content %}
 <form action="#" method="post">
-    <p>Welcome, {{user}}. Please insert your password.</p>
-    <p><input type="text" name="nm" /></p>
+    <p>Welcome, {{usernm}}. Please insert your password.</p>
+    <p><input type="text" name="pwd" /></p>
     <p><input type ="submit" value="submit" /></p>
 </form>
 {% endblock %}
