--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -36,8 +36,9 @@
         </div>
       </div>
     </nav>
-
     <div class="container"></div>
+    {% block content %}
+    {% endblock %}
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
