--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -36,9 +36,29 @@
         </div>
       </div>
     </nav>
-    <div class="container"></div>
+
+    <!-- allows backend to flash messages.-->
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+      {% for category, message in messages %}
+      {% if category == 'error' %}
+      <div class="alert alert-danger alert-dimissable fade show" role="alert">
+        {{ message }}
+        <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span></button>
+      </div>
+      {% elif category == 'success' %}
+      <div class="alert alert-success alert-dimissable fade show" role="alert">
+        {{ message }}
+        <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span></button>
+      </div>
+      {% endif %}
+      {% endfor %}
+    {% endif %}
+    {% endwith %}
+
+    <div class="container">
     {% block content %}
-    {% endblock %}
+    {% endblock %}</div>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
