--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,5 +1,16 @@
 {% extends "base.html" %} {% block title %} Login {% endblock %}
 
 {% block content %} 
-<h1>This is the login page</h1>
+<form method="POST">
+    <h3 align="center">Log In</h3>
+    <div class="form-group">
+        <label for="email">Email Address</label>
+        <input type="email" class="form-control" id="email" name="email" placeholder="Enter email"/>
+    <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" id="password" name="password" placeholder="Enter desired password"/>
+    </div>
+    <br />
+    <button type="submit" class="btn btn-primary">Submit</button> 
+</form>
 {% endblock %}
