finished project (almost(read desc.))
basically done, just can't get the server to stop throwing an error when deleting a note. Something with jsonify. Will look into later, for now archiving this, and forking it to create the real 1.0 lab :)

--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -10,7 +10,7 @@
     </div>
     <div class="form-group">
         <label for="firstName">First Name</label>
-        <input type="text" class="form-control" id="firstName" name="firstName" placeholder="Enter first name"/>
+        <input type="text" class="form-control" id="firstName" name="first_name" placeholder="Enter first name"/>
     </div>
     <div class="form-group">
         <label for="password1">Password</label>
