--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -29,10 +29,13 @@
       </button>
       <div class="collapse navbar-collapse" id="navbar">
         <div class="navbar-nav">
+          {% if user.is_authenticated %}
           <a class="nav-item nav-link" id="home" href="/">Home</a>
           <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
-          <a class="nav-item nav-link" id="login" href="/login">Login</a>
+          {% else %}
           <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
+          <a class="nav-item nav-link" id="login" href="/login">Login</a>
+          {% endif %}          
         </div>
       </div>
     </nav>
@@ -46,7 +49,7 @@
         {{ message }}
         <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span></button>
       </div>
-      {% elif category == 'success' %}
+      {% else %}
       <div class="alert alert-success alert-dimissable fade show" role="alert">
         {{ message }}
         <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span></button>
