--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
     %}
     <h1 align="center">Notes</h1>
-    <h1>Welcome, {{user.firstName.title()}}.</h1>
+    <h1>Welcome, {{firstName.title()}}.</h1>
     {% endblock %}
