--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
     %}
-    <h1 align="center">Notes</h1>
+    <h1 align="center">grizhe's vulnerable banksystem</h1>
     <h1>Welcome, {{firstName.title()}}.</h1>
+    </br>
+    <div align="center"> Your current balance is: {{balance}}</div>
     {% endblock %}
