--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -3,5 +3,5 @@
     <h1 align="center">grizhe's vulnerable banksystem</h1>
     <h1>Welcome, {{firstName.title()}}.</h1>
     </br>
-    <div align="center"> Your current balance is: {{balance}}</div>
+    <div align="center"> Your current balance is: ${{f"{balance:,}"}}</div>
     {% endblock %}
