--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -3,5 +3,8 @@
     <h1 align="center">grizhe's vulnerable banksystem</h1>
     <h1>Welcome, {{firstName.title()}}.</h1>
     </br>
-    <div align="center"> Your current balance is: ${{f"{balance:,}"}}</div>
+    <div align="center"> Your current balance is: ${{ balance }}</div>
+    <div align="center"><h6 style="color:rgb(95, 95, 95)" style="font-size:x-small">this is a theoretical balance, and is not actual money.</h6></div>
+    </br>
+    <div align="center"><button type="menu"></button></div>
     {% endblock %}
