adding ltv logo to navbar and homepage buttons

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -6,5 +6,9 @@
     <div align="center"> Your current balance is: ${{ balance }}</div>
     <div align="center"><h6 style="color:rgb(95, 95, 95)" style="font-size:x-small">this is a theoretical balance, and is not actual money.</h6></div>
     </br>
-    <div align="center"><button type="menu"></button></div>
+    <div align="center">
+        <button type="menu" href="http://localhost:5000/withdrawal">Withdrawal</button>
+        </br>
+        <button type="menu" href="https://www.localhost:5000">Deposit</button>
+    </div>
     {% endblock %}
