--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -36,7 +36,7 @@
           <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
           <a class="nav-item nav-link" id="login" href="/login">Login</a>
           {% endif %}          
-        </div>
+          <a class="nav-item" id="ltv-logo"><img src="ltv-logo-white.png"/></div>
       </div>
     </nav>
 
