--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -36,10 +36,10 @@
           <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
           <a class="nav-item nav-link" id="login" href="/login">Login</a>
           {% endif %}
-          <img align="center" src="ltv-logo-white.png" width="35" height="35"/>
         </div>
     </div>
-      </nav>
+    <img align="center" src="/static/ltv-logo-white.png" width="35" height="35"/>
+    </nav>
 
     <!-- allows backend to flash messages.-->
     {% with messages = get_flashed_messages(with_categories=true) %}
