it all works >:)

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -6,20 +6,9 @@
     <div align="center"> Your current balance is: ${{ balance }}</div>
     <div align="center"><h6 style="color:rgb(95, 95, 95)" style="font-size:x-small">this is a theoretical balance, and is not actual money.</h6></div>
     </br>
-    <div align="center">
-        <button id="withdrawal-button" class="btn btn-primary" href="http://localhost:5000/withdrawal">Withdrawal</button>
-        <script type="text/javascript">
-            document.getElementyById("withdrawal-button").onclick = function() {
-                location.href = "/withdrawal";
-            }
-        </script>    
-    </br>
-        </br>
-        <button id="deposit-button" type="menu" class="btn btn-primary" href="https://www.localhost:5000">Deposit</button>
-        <script type="text/javascript">
-            document.getElementById("deposit-button").onclick = function() {
-                location.href = "/deposit";
-            }
-        </script>
         </div>
     {% endblock %}
+</div>
+</br>
+<div>
+    </div>
