--- a/website/templates/withdrawal.html
+++ b/website/templates/withdrawal.html
@@ -1,13 +1,19 @@
-{% extends base.html %} {% blocktitle %} Withdrawal {% endblock %}
+{% extends "base.html" %} {% block title %} Withdrawal {% endblock %}
 {% block content %}
 </div>
-<head align="center"> Your balance is ${ bal }. How much would you like to withdrawal?</head>
+<head align="center"> Your balance is ${{ bal }}. How much would you like to withdrawal?</head>
 </br></br>
+<form method="POST">
 <div class="form-group" align="center">
     <label for="amount">Amount</label>
     <input type="amount" class="form-control" id="amount" name="amount" placeholder="Amount to withdrawal"/>
 </div>
 </br>
+<div>
+    </div>
+</div>
+</br>
 <div align="center">
 <button type="submit" class="btn btn-primary">Withdrawal</button></div>
+</form>
 {% endblock %}
