--- a/website/templates/settings.html
+++ b/website/templates/settings.html
@@ -3,12 +3,12 @@
     <title>Settings</title>
     <header align="center">Settings</header>
     <form method="POST" align="center">
-        <button type="submit" value="darkMode" class="btn btn-primary">Dark Mode</button>
+        <button type="submit" id="form" value="darkMode" class="btn btn-primary">Dark Mode</button>
     </br>
     </br>
-    <button type="submit" value="lightMode" class="btn btn-primary">Light Mode</button>
+    <button type="submit" id="form" value="lightMode" class="btn btn-primary">Light Mode</button>
 </br></br>
-    <button type="submit" value="removeAccount" class="btn btn-primary">Remove Account</button>
+    <button type="submit" id="form" value="removeAccount" class="btn btn-primary">Remove Account</button>
 </form>
 </div>
 {% endblock %}
