--- a/website/templates/settings.html
+++ b/website/templates/settings.html
@@ -1,8 +1,9 @@
-{% extends "base.html"%} {% endblock %} {% block content %}
+{% extends "base.html %} {% block title %} settings {% endblock %}
+{% block content %}
 <div>
     <title>Settings</title>
-    <header align="center">Settings</header>
-    <form method="POST" align="center">
+    <header >Settings</header>
+    <form method="POST" >
         <button type="submit" id="form" value="darkMode" class="btn btn-primary">Dark Mode</button>
     </br>
     </br>
