I love this program! (with sarcasm)

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -29,22 +29,21 @@
       </button>
       <div class="collapse navbar-collapse" id="navbar">
         <div class="navbar-nav">
-          {% if user.is_authenticated %}
+          {% if auth  %}
           <a class="nav-item nav-link" id="home" href="/">Home</a>
           <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
           <a class="nav-item nav-link" id="withdrawal" href="/withdrawal">Withdrawal</a>
           <a class="nav-item nav-link" id="deposit" href="/deposit">Deposit</a>
-          <a class="nav-item nav-link" id="settings" href="/settings"><img src="static/settings-gear.png" width="35" height="35"/></a>
+          <a class="nav-item nav-link" id="settings" href="/settings"><img src="static/settings-gear.png" width="27" height="27"/></a>
           {% else %}
           <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
           <a class="nav-item nav-link" id="login" href="/login">Login</a>
-          <a class="nav-item nav-link" id="settings" href="/settings"><img src="static/settings-gear.png" width="35" height="35"/></a>
+          <a class="nav-item nav-link" id="settings" href="/settings"><img src="static/settings-gear.png" width="27" height="27"/></a>
           {% endif %}
           
         </div>
-    </div>
-    <img align="center" src="static/ltv-logo-white.png" width="35" height="35"/>
-    <img align="center" src="/static/ltv-logo-white.png" width="35" height="35"/>
+    </div align="center">
+    <img src="static/ltv-logo-white.png" width="35" height="35"/>
     </nav>
 
     <!-- allows backend to flash messages.-->
@@ -65,16 +64,17 @@
       {% endfor %}
     {% endif %}
     {% endwith %}
-      <!--defaults to light mode under current config-->
+      <!--defaults to light mode / dark mode under user selection-->
       <div class="container">
-      <body style="background-color:rgba(215, 218, 255, 0.671)">
-      {% if mode == 'dark' %}
-      <body style="background-color:rgb(44, 55, 85)">
-        {% block content %}
-        {% endblock %}
-      </body></div>
-      {% endif %}
-    <script
+        {% block content %}{% if auth and mode == 'dark' %}
+          <body style="background-color:rgb(44, 55, 85)"></body>
+        {% else %}
+        <body style="background-color:rgba(201, 255, 255, 0.878)"></body>
+        {% endif %}{% endblock %}
+      </div>
+      
+      
+      <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
       crossorigin="anonymous"
