saving so i can use burpsuite on the laptop

--- a/website/templates/settings.html
+++ b/website/templates/settings.html
@@ -6,11 +6,11 @@
     </div>
     <div>
         <form method="POST">
-            <button type="submit" id="form" value="darkMode" class="btn btn-primary">Dark Mode</button>
+            <button name="darkMode" type="submit" id="form" value="darkMode" class="btn btn-primary">Dark Mode</button>
         </br></br>
-        <button type="submit" id="form" value="lightMode" class="btn btn-primary">Light Mode</button>
+        <button mame="lightMode" type="submit" id="form" value="lightMode" class="btn btn-primary">Light Mode</button>
         </br></br>
-        <button type="submit" id="form" value="removeAccount" class="btn btn-primary">Remove Account</button>
+        <button name="removeAccount" type="submit" id="form" value="removeAccount" class="btn btn-primary">Remove Account</button>
     </form>
     </div>
 {% endblock %}
