--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
     %}
     <h1 align="center">grizhe's vulnerable banksystem</h1>
-    <h1>Welcome, {{firstName.title()}}.</h1>
+</br></br></br>
+    <h1 align="center">Welcome, {{firstName.title()}}.</h1>
     </br>
     <div align="center"> Your current balance is: ${{ balance }}</div>
     <div align="center"><h6 style="color:rgb(95, 95, 95)" style="font-size:x-small">this is a theoretical balance, and is not actual money.</h6></div>
